finish core api
