# routers/commentsRouter_controllers.go
@@ -7,51 +7,6 @@ import (
 
 func init() {
 
-    beego.GlobalControllerRouter["test/controllers:ObjectController"] = append(beego.GlobalControllerRouter["test/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Post",
-            Router: `/`,
-            AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["test/controllers:ObjectController"] = append(beego.GlobalControllerRouter["test/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: `/`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["test/controllers:ObjectController"] = append(beego.GlobalControllerRouter["test/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: `/:objectId`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["test/controllers:ObjectController"] = append(beego.GlobalControllerRouter["test/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: `/:objectId`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["test/controllers:ObjectController"] = append(beego.GlobalControllerRouter["test/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: `/:objectId`,
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
     beego.GlobalControllerRouter["test/controllers:ProductController"] = append(beego.GlobalControllerRouter["test/controllers:ProductController"],
         beego.ControllerComments{
             Method: "AddProduct",
@@ -63,8 +18,8 @@ func init() {
 
     beego.GlobalControllerRouter["test/controllers:ProductController"] = append(beego.GlobalControllerRouter["test/controllers:ProductController"],
         beego.ControllerComments{
-            Method: "Purchase",
-            Router: `/purchase`,
+            Method: "Purchases",
+            Router: `/purchases`,
             AllowHTTPMethods: []string{"Post"},
             MethodParams: param.Make(),
             Filters: nil,
